# Memphant

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  compose.yaml  porting.md
.codex/: linked-repos.json
benchmarks/: nightly-sampled.yaml  public-real-sampled.yaml  release.yaml  rung10-baseline-sampled.yaml  rung10-state-style-sampled.yaml  rung11-baseline-sampled.yaml  rung11-memorystress-sampled.yaml  rung12-baseline-sampled.yaml  rung12-l4-exhaustive-sampled.yaml  rung13-baseline-sampled.yaml  rung13-learned-rerank-sampled.yaml  rung15-baseline-sampled.yaml  rung15-inferred-belief-sampled.yaml  rung4-baseline-sampled.yaml  rung4-lme-beam-sampled.yaml  rung5-baseline-sampled.yaml  rung5-state-style-sampled.yaml  rung6-filesystem-control-sampled.yaml  rung6-no-edges-sampled.yaml  rung6-state-lme-sampled.yaml  rung7-baseline-sampled.yaml  rung7-state-style-sampled.yaml  rung8-baseline-sampled.yaml  rung8-state-style-sampled.yaml  rung9-baseline-sampled.yaml  rung9-state-lme-sampled.yaml
bindings/python/: pyproject.toml
bindings/python/examples/: roundtrip.py
bindings/python/memphant/: __init__.py
bindings/python/tests/: test_contract_drift.py
config/: deep-recall-v1.txt  structured-state-v1.txt
crates/memphant-cli/: Cargo.toml
crates/memphant-cli/src/: file_plane.rs  main.rs
crates/memphant-cli/tests/: bootstrap_check.rs  compile_contract.rs  file_plane_contract.rs  file_plane_n12.rs  help_contract.rs  http_verbs.rs  verify_contract.rs
crates/memphant-core/: Cargo.toml
crates/memphant-core/src/: deep_recall.rs  lib.rs  mutation_contract.rs  service.rs  structured_state.rs
crates/memphant-core/tests/: artifact_reconstruction.rs  bitemporal_recall.rs  candidate_pool.rs  chunk_span_invariant_repro.rs  context_authorization.rs  context_bound_transaction.rs  context_policy.rs  contextual_chunk_write.rs  correction_provenance.rs  cross_reranker.rs  deep_recall.rs  embedding_channel.rs  fact_extraction.rs  hot_path_slo.rs  mutation_contract.rs  mutation_ledger.rs  mutation_service_idempotency.rs  quantity_rollup.rs  recall_pool_depth.rs  recall_trace_golden.rs  reflect_claim_regressions.rs  resource_contextual_chunk_write.rs  retain_validation.rs  store_contract.rs  structured_state_projection.rs  subject_erasure.rs  surface_mutations.rs  temporal_grounding.rs  worker_queue_contract.rs  write_compiler_golden.rs
crates/memphant-eval/: Cargo.toml
crates/memphant-eval/src/: bench_lme.rs  lib.rs  main.rs  pool_tools.rs
crates/memphant-eval/tests/: eval_contract.rs  profile_contract.rs  syndai_trace_compare.rs
crates/memphant-mcp/: Cargo.toml
crates/memphant-mcp/src/: lib.rs  main.rs
crates/memphant-mcp/tests/: edge_auth.rs  mcp_schema_contract.rs
crates/memphant-runtime/: Cargo.toml
crates/memphant-runtime/src/: api_embeddings.rs  api_reranking.rs  deep_recall_openrouter.rs  embeddings.rs  lib.rs  structured_state_openrouter.rs
crates/memphant-server/: Cargo.toml
crates/memphant-server/src/: lib.rs  main.rs
crates/memphant-server/tests/: auth_contract.rs  database_config.rs  rest_contract.rs
crates/memphant-store-postgres/: Cargo.toml
crates/memphant-store-postgres/src/: lib.rs  store.rs
crates/memphant-store-postgres/tests/: claim_token_regressions.rs  episodic_rls_leakage.rs  hot_path_slo_pg.rs  mutation_ledger.rs  persistent_connection.rs  pg_store_contract.rs  provider_lint.rs  recall_clock_not_past_dated.rs  reclaim_idempotency.rs  role_matrix.rs  subject_erasure.rs  tenant_scoped_writes.rs
crates/memphant-worker/: Cargo.toml
crates/memphant-worker/src/: main.rs
crates/memphant-worker/tests/: worker_once.rs
docs/: release-process.md
mcp/: memphant.tools.v1.json
openapi/: memphant.v1.json
scripts/: apply_memphant_migrations.py  audit_memsyco_calibration_overlap.py  build_lme_reader_controls.py  build_state_bench_memphant_arm.py  check_memphant_live_catalog.py  check_memphant_migration_boundary.py  check_memphant_migration_class.py  check_memphant_migration_contract.py  check_spec_drift.py  code_lane_extract.py  code_lane_mine.py  code_lane_run_deterministic.py  code_lane_run_memphant.py  compare_retrieval_screen.py  e2e_probe.sh  episodic_lane_corpus.py  episodic_lane_run_memphant.py  fetch_longmemeval.py  gate_common.py  gate_compare.py  gate_mine_goldens.py  gate_run_memphant.py  gate_run_syndai.py  gate_runtime.py  generate_memora_memphant_answers.py  generate_memsyco_evidence_calibration.py  generate_memsyco_objective_calibration.py  generate_memsyco_personalized_use_calibration.py  generate_memsyco_scope_calibration.py  generate_memsyco_valid_selection_calibration.py  generate_stale_memphant_answers.py  ingest_public_bench.py  materialize_longmemeval_v2_runtime.py  provider_attempts.py  run_lme_v2_p1_t6.py  run_longmemeval_official_eval.py  run_longmemeval_v2.py  run_memora_fama.py  run_postgres_slo.py  run_reader.py  (+8 more)
tests/: test_build_lme_reader_controls.py  test_code_lane_extract.py  test_code_lane_gate_contract.py  test_code_lane_mine.py  test_code_lane_run_memphant.py  test_compare_retrieval_screen.py  test_episodic_lane_corpus.py  test_episodic_lane_run_memphant.py  test_gate_compare.py  test_gate_mine_goldens.py  test_gate_r15_cross_rerank.py  test_gate_r1_breadcrumb.py  test_gate_r1_resource_chunks.py  test_gate_runtime.py  test_gatemem_conditional_gate.py  test_launch_evidence_contract.py  test_memora_benchmark_contract.py  test_public_benchmark_adapters.py  test_public_launch_gate.py  test_repo_contract.py  test_restraint_benchmark_contract.py  test_restraint_launch_gate.py  test_run_lme_v2_p1_t6.py  test_run_longmemeval_official_eval.py  test_run_reader_contract.py  test_run_swe_explore.py  test_standing_quality_bars.py  test_state_bench_contract.py  test_state_bench_memphant_arm.py  test_syndai_gate_contract.py  test_temporal_benchmark_contract.py  test_validate_memora_reasoning_proof.py  test_wsa_migration_contract.py  test_wsd_public_surfaces.py  test_wsh_deployment_contract.py
web/: package.json  (+3 more)
(+1054 files in other folders)
