[workspace]
members = [
  "crates/memphant-cli",
  "crates/memphant-core",
  "crates/memphant-eval",
  "crates/memphant-mcp",
  "crates/memphant-server",
  "crates/memphant-store-postgres",
  "crates/memphant-types",
  "crates/memphant-worker",
]
exclude = ["spikes/rust-retain"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/siddmax/memphant"
rust-version = "1.96"

[workspace.dependencies]
async-trait = "0.1"
memphant-core = { path = "crates/memphant-core" }
memphant-types = { path = "crates/memphant-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt"] }
uuid = { version = "1", features = ["serde", "v7"] }
