[workspace]
members = [
  "crates/memphant-cli",
  "crates/memphant-core",
  "crates/memphant-eval",
  "crates/memphant-mcp",
  "crates/memphant-runtime",
  "crates/memphant-server",
  "crates/memphant-store-postgres",
  "crates/memphant-store-testkit",
  "crates/memphant-types",
  "crates/memphant-worker",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/siddmax/memphant"
rust-version = "1.96"

[workspace.dependencies]
async-trait = "0.1"
axum = "0.8"
fsrs = "6.6.1"
futures = "0.3"
eventsource-stream = "0.2"
http-body-util = "0.1"
jiff = "0.2"
schemars = { version = "1", features = ["uuid1"] }
memphant-core = { path = "crates/memphant-core" }
memphant-store-testkit = { path = "crates/memphant-store-testkit" }
memphant-types = { path = "crates/memphant-types" }
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
serde_json = "1"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls", "stream"] }
tempfile = "3"
thiserror = "2"
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread", "time"] }
ureq = { version = "3", default-features = false, features = ["json", "rustls"] }
uuid = { version = "1", features = ["serde", "v4", "v7"] }
yaml_serde = "0.10"

# Dev builds skip debug info: the test loop's cost is linking ~45 test binaries
# against a large core lib, and debug info dominates macOS link time. Backtraces
# keep function names; use `debug = "line-tables-only"` if line numbers are
# needed, or a one-off `CARGO_PROFILE_DEV_DEBUG=2 cargo test` for a debugger.
[profile.dev]
debug = 0
