[package]
name = "memphant-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
cap-std.workspace = true
cap-fs-ext.workspace = true
jiff.workspace = true
memphant-core.workspace = true
memphant-store-postgres = { path = "../memphant-store-postgres" }
memphant-types.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
ureq.workspace = true
uuid.workspace = true

[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1.4", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
] }

[dev-dependencies]
axum.workspace = true
memphant-core = { workspace = true, features = ["test-support"] }
memphant-server = { path = "../memphant-server" }
memphant-runtime = { path = "../memphant-runtime" }
tempfile.workspace = true
