[package]
name = "memphant-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
fsrs.workspace = true
memphant-types.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde = { workspace = true }
serde_json.workspace = true
tokio.workspace = true
