[package]
name = "memphant-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fsrs.workspace = true
jiff.workspace = true
memphant-types.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
serde = { workspace = true }
serde_json.workspace = true
tokio.workspace = true
