[package]
name = "memphant-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fsrs.workspace = true
futures.workspace = true
jiff.workspace = true
memphant-types.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
memphant-store-testkit.workspace = true
serde = { workspace = true }
serde_json.workspace = true
# test-util adds tokio's pausable virtual clock (`start_paused`) so the
# provider-latency worker tests are deterministic instead of racing the real
# timer under a loaded parallel test run.
tokio = { workspace = true, features = ["test-util"] }
