[package]
name = "memphant-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
memphant-core.workspace = true
memphant-runtime = { path = "../memphant-runtime" }
memphant-store-postgres = { path = "../memphant-store-postgres" }
memphant-types.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
yaml_serde.workspace = true

[features]
fastembed = ["memphant-runtime/fastembed"]

[dev-dependencies]
tempfile.workspace = true
