[package]
name = "memphant-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
memphant-core.workspace = true
memphant-runtime = { path = "../memphant-runtime" }
memphant-store-postgres = { path = "../memphant-store-postgres" }
memphant-types.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
yaml_serde.workspace = true

[features]
fastembed = ["memphant-runtime/fastembed"]
# Self-implies `fastembed` (not just `memphant-runtime/qwen3`): bench_lme.rs
# has its OWN `#[cfg(feature = "fastembed")]` gates around `build_fastembed`/
# `build_cross_reranker`, a separate cargo-feature namespace from
# memphant-runtime's. Without this, `--features qwen3` alone would leave
# those gates off and every --embed-model arm (not just qwen3) would report
# "not compiled in".
qwen3 = ["fastembed", "memphant-runtime/qwen3"]

[dev-dependencies]
tempfile.workspace = true
