[package]
name = "memphant-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
memphant-core.workspace = true
memphant-runtime = { path = "../memphant-runtime" }
memphant-types.workspace = true
rmcp = { version = "2.2", features = [
  "server",
  "macros",
  "schemars",
  "transport-io",
  "transport-streamable-http-server",
  "transport-streamable-http-server-session",
] }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
rmcp = { version = "2.2", features = ["client"] }
