[package]
name = "memphant-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
memphant-core.workspace = true
memphant-runtime = { path = "../memphant-runtime" }
memphant-types.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
uuid.workspace = true

# The shipped server embeds by DEFAULT (pre-production; accuracy > startup
# cost; the bge-small model is cached locally). `MEMPHANT_EMBEDDINGS=off`
# opts out at runtime without rebuilding.
[features]
default = ["fastembed"]
fastembed = ["memphant-runtime/fastembed"]
qwen3 = ["memphant-runtime/qwen3"]

[dev-dependencies]
http-body-util.workspace = true
tower.workspace = true
