[package]
name = "memphant-store-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
memphant-core.workspace = true
memphant-types.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx = { version = "0.9", default-features = false, features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls",
  "uuid",
  "json",
  "macros",
] }
uuid.workspace = true

[dev-dependencies]
memphant-store-testkit.workspace = true
tokio.workspace = true
