[package]
name = "memphant-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
memphant-core.workspace = true
memphant-runtime = { path = "../memphant-runtime" }
tokio = { workspace = true, features = ["signal", "time"] }
